--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --body-bg-color: #1F1F1F;
+  --body-bg-color: #1f1f1f;
   --primary-color: #77f382;
 
   font-size: 62.5%;
@@ -80,7 +80,7 @@ ul {
 }
 
 .button svg path {
-  stroke: var(--primary-color)
+  stroke: var(--primary-color);
 }
 
 .button:first-child {
@@ -90,7 +90,7 @@ ul {
 /*  Header */
 
 header .header {
-  margin-top: 12rem;
+  margin-top: 6rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -116,4 +116,10 @@ header .header p {
   font-weight: 300;
   font-size: 1.6rem;
   line-height: 2.4rem;
+}
+
+@media (min-width: 768px) {
+  header .header {
+    margin-top: 20rem;
+  }
 }
